assets/sass/screen.scss
/* ... */
div.cleardiv {
	padding: 0;
	margin: 0;
	height: 0;
	clear: both;
}

.cacap-row {
	padding-top: 25px;
	margin: 0 auto;
	max-width: 100%;
	min-width: 768px;
	width: $row_width;

	/* Next two declarations help to clear the row */
	&:after {
		clear: both;
	}

	&:before, &:after {
		content: " ";
		display: table;
	}

	&.cacap-row-edit-button {
		padding: 15px 0 0 0;
	}
}

body.short-header {
	#cacap-header {
		height: 40px;
	}
}

body.cacap #cacap-header {
	background: transparent url('../images/black_linen_v2.png');
	padding: 0 10px 30px;
	box-shadow: 0 12px 12px -6px #000;

	* {
		color: $header_primary_text_color;
	}

	a {
		color: $link_color;
		text-decoration: none;
	}

	.cacap-char-count-gloss {
		text-align: right;
		font-size: .75rem;
		margin-bottom: .5em;
		font-style: italic;
	}

	span.cacap-char-count-warning {
		display: none;
	}

	.cacap-length-red span.cacap-char-count {
		color: #f00;
	}

	.cacap-length-red span.cacap-char-count-warning {
		display: block;
	}

	.cacap-length-yellow span.cacap-char-count {
		color: yellow;
	}

	.cacap-hero-row {
		border-bottom: 1px solid $header_primary_text_color;
		padding-bottom: 40px;
		position: relative;

		& > div > div {
			float: left;
		}

		a {
			color: $link_color;
			text-decoration: none;
		}

		.button > a {
			color: #fff;
		}

		&.stuck {
			background: transparent url('../images/black_linen_v2.png');
			width: 100%;
			position: fixed;
			padding: 35px 0 10px 10px;
			margin-left: -20px;
			border-bottom: none;
			top: 0;
			z-index: 1000;

			.cacap-sticky-dummy {
				width: 940px;
				margin: 0px auto;
			}

			.cacap-hero *,
			.cacap-avatar * {
				display: none;
			}

			.cacap-hero h1,
			.cacap-hero h1 a,
			.cacap-avatar img.avatar {
				display: inherit;
				z-index: 1000;
			}

			.cacap-avatar img.avatar {
				height: 80px;
				width: 80px;
				float: right;
			}

			.cacap-edit-buttons {
				clear: both;
				position: relative;
				width: 940px;
				margin: 0 auto;
				padding-top: 20px;
			}
		}
	}

	.cacap-hero-row-sticky {
		padding-top: 0;
		height: 70px !important;
		width: 100% !important;
	}

	.cacap-hero {
		width: $col_width_threequarters;

		p {
			font-size: 1.5em;
		}
	}

	.cacap-at-name {
		font-size: .5em;

		.cacap-at-name-tooltip {
			padding: 4px 6px;
		}
		.cacap-at-name-tooltip:hover .cacap-tooltip {
			display: block;
			color: $body_primary_text_color;
			text-align: left;
			width: 140px;
		}
	}

	.cacap-short-aboutme {
		color: $header_secondary_text_color;
		font-weight: 300;
		line-height: 1.3;
		margin-bottom: 17px;
	}

	.cacap-avatar {
		width: 130px;
		float: right !important;

		& > * {
			margin-bottom: 1em;
		}

	}

	.activity {
		color: $activity_color;
		font-size: 0.8rem;
	}

	.cacap-edit-submit {
		color: $button_text_color;
	}

	#cacap-vitals {
		& > dt,
		& > dd {
			display: block;
			padding: 7px 10px 7px 5px;
			margin: 0 10px 15px 0;
		}

		dt {
			width: $col_width_narrow;
			float: left;
			border-right: 1px solid $header_primary_text_color;
			margin-right: 20px;
		}

		dd {
		}

		dd.cacap-vitals-contact > * {
			margin-top: -8px;
		}
	}

	.cacap-bp-profile-fields {
		input[type="text"], textarea {
			color: $body_primary_text_color;
			margin-bottom: 12px;
			width: 100%;
			border-radius: 2px 2px 2px 2px;
			box-shadow: 0 1px 2px rgba(0,0,0,0.1) inset;
		}

		input[type="text"] {
			height: 32px;
		}

		label, span.label {
			display: block;
			color: $header_secondary_text_color;
			margin-bottom: 3px;
		}

		input[type="radio"], input[type="checkbox"] {
			margin: .3em 0;
		}

		.field-visibility-settings legend,
		.field-visibility-settings-toggle,
		p.description {
			margin-bottom: 0;
		}

		.field-visibility-settings {
			display: none;
		}

		.cacap-half-col {
			float: left;
			width: 48%;
		}

		#cacap-half-col-1 {
			margin-right: 4%;
		}

		.current-visibility-level {
			font-weight: bold;
			color: $link_pink;
		}

		div.editfield {
			margin-bottom: 2.5em;
		}
	}
}

#cacap-tabs {
	display: block;
	height: $tab_height;
	list-style: none outside none;
	margin: 20px 0;
	padding: 0;

	a {
		text-decoration: none;
		color: $header_secondary_text_color;
		display: block;
		height: $tab_height;
		line-height: $tab_height;
		padding: 0 23px;
	}

	ul {
		border-bottom: 1px solid #E6E6E6;
		height: 100%;
	}

	li {
		display: block;
		float: left;
		text-align: center;

		&.current-tab {
			margin-bottom: -1px;
			border-top: 1px solid #e6e6e6;
			border-left: 1px solid #e6e6e6;
			border-right: 1px solid #e6e6e6;

			a {
				font-weight: bold;
				color: #3c3c3c;
				border-bottom: 1px solid #e6e6e6;
				border-bottom-color: #fff;
				-webkit-border-radius: 5px 5px 0 0;
				-moz-border-radius: 5px 5px 0 0;
				border-radius: 5px 5px 0 0;
			}
		}
	}
}

#cacap-edit-button {
	float: right;
	width: 100px;
	z-index: 1; // hack
}

#cacap-body {
	padding: 50px 0 100px 0;
	position: relative;

	.cacap-edit-submit {
		right: 130px;
	}
}

.cacap-widget {
	margin-bottom: 20px;
}

.cacap-widget-title {
	width: $col_width_onethird;
	float: left;
	text-transform: uppercase;
	font-size: 2em;
	font-weight: 900;
}

.cacap-widget-content {
	padding-left: $col_width_onethird;
	min-height: 1.5em;
}

#cacap-widget-list {
	& > li {
		overflow: hidden; /* Children are floated */
		padding: 0 $widget_lr_padding;
		position: relative;

		& > div {
			margin: $widget_tb_padding 0;
		}
	}

	&.currently-editing {
		.cacap-click-to-edit.cacap-widget-section-editable {
			border: 2px solid transparent;

			&.editing {
				border: 2px solid $light_gray;
			}
		}
	}

	.cacap-click-to-edit.cacap-widget-section-editable {
		border: 2px dashed $light_gray;
	}
}

body.profile-edit {
	#cacap-widget-list {
		& > li {
			outline: 1px solid #555555;
			margin: 0.5em 0;
		}

		.ui-state-highlight {
			outline: 1px dashed #555;
			height: 75px;
		}
		.ui-helper-hidden-accessible {
			display: none;
		}

	}
}

.deprecated-para {
	opacity: .75;
	font-size: .8rem;
	font-style: italic;
}
/* ... */

